		* Commited a patch from wolti that fixes compilation on 
		  sparc/Solaris systems.
		* More sparc compilation fixes, thanks to wimms.
		* Removed the declaration of void ParseCommandLine(); from
		  TextClient.h and WebInterface.h. It seems to have been
		  forgotten here.
		* Patch to listctrl.cpp, was segfaulting in 2.5.1 when
		  hiding/resizing columns. In 2.4.2 was just asserting.

	shakraw:
		* Fixed the "remote connect" bug
		* Unicode support for amuleweb
		* Fixed typos on amuleDlg
		* Unicoded some files.

	steve.reaver:
		* Fixed a messed up display in html code in aMule.tmpl

	thepolish:
		* wxCas:
			- Fixed for amulesig.dat changes
			- Solved localized decimal separator pb
			- Embeded all pixmaps in src files and remove now unused pixmaps dir (better for portability)
			- Win32 toolbar pixmaps have transparency now
			- Added variable refresh timers
			- Added user preference system
			- Added statistic image creation
			- Added FTP support for an automatic upload of the statistic image
		
		* aLinkCreator:
			- Added this new maaarvellous tool suggested by DeltaHF to compute ed2k links from a file (same behavior as eMule link creator, but no shared code)
			- Rewrote md4hash and ed2khash code to avoid external dependencies (libcryptopp free), and to be Big Endian proof (works on Mac afaik)
			- Added alcc, the "alc for console" command line client
			- Added toolbar themes (KDE and DeltaHF's default for now)
			- Thanks to Phoenix (Unicode, Hook, commandline...) and one_2_one (Mac tests)
			
		* aMule:
			- Rewrote Makefile.am tree to fit to GNU standards
			- Removed Makefiles stuff for wxwidgets < 2.2.6
			- With >= wx-2.5, use wx-config --libs=base,net instead wxbase-config (because base in buggy on 2.5), and keep using both on 2.4 versions
			- Check for wx >= 2.4.2 instead of 2.4.0
			- Removed GTK2 warning with wx >= 2.5
			- Fixed GTK2 not detected
			- Enabled documentation installation